add query data without index user interface