@@ -10,3 +10,5 @@ B. run code:
         java -Djava.ext.dirs=mvnRepositoryPath  cn/sky/database/controller/SplitDataController absoluteDataSetFilePath absoluteRepositoryPath rows
     2.create index based on the specified column of the dataset:
         java -Djava.ext.dirs=mvnRepositoryPath  cn/sky/database/controller/IndexController absoluteRepositoryPath absoluteIndexPath column capcity
+    3.query data without index:
+        java -Djava.ext.dirs=mvnRepositoryPath  cn/sky/database/controller/QueryWithoutIndexController  absoluteRepositoryPath column value threadSize
